add pre-signed urls, rework repo
